ClassByteCode generator init version🙃🙃🙃